# hazel-game-engine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Main.cpp  README.md
Hazel/: CMakeLists.txt
Hazel/include/: Hazel.h
Hazel/include/Hazel/: Application.h  EntryPoint.h  Log.h
Hazel/include/hazel/: Test.h
Hazel/src/: Application.cpp  Log.cpp  Test.cpp
Sandbox/: CMakeLists.txt
Sandbox/src/: SandboxApp.cpp  Test.cpp
